[tool.poetry]
name = "news-reader"
version = "0.1.0"
description = ""
authors = ["Kazato Sugimoto <uiureo@gmail.com>"]
readme = "README.md"
packages = [{include = "news_reader"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
